# tournament-organizer-system

./: .gitignore  .pre-commit-config.yaml  DOCUMENTATION_QUALITY.md  ENTERPRISE_WORKFLOW_SUMMARY.md  FINAL_COMPLETION_REPORT.md  FIRST_AID_DOMAIN_QUALITY_ISSUE.md  PR_DESCRIPTION.md  first_aid_domain_update_issue.md  fix_all_line_lengths.py  fix_line_length.py  fix_remaining_issues.py  run-quality-checks-in-container.ps1  temp_issue_body.md
documents/: .bandit  .containerignore  .gitignore  .markdownlint-cli2.jsonc  .markdownlint-cli2.yaml  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .pymarkdown.json  .yamllint.yaml  COMPLETE_WORKFLOW_PROOF.md  CONTAINERIZED-DEVELOPMENT.md  Containerfile  GITHUB_ACTIONS_ISSUE.md  PROFESSIONAL_ENVIRONMENT_REPORT.md  README.md  WORKFLOW_DEMONSTRATION_RESULTS.md  compose.yml  container_workflow_test.sh  container_workflow_test_fixed.sh  coverage.json  fix_ci_issues.py  fix_markdownlint_errors.py  main.py  mkdocs.yml  mypy.ini  pyproject.toml  security_report.json  setup-dev-env.bat  setup-dev-env.sh  validate_workflows.py
documents/.github/instructions/: documentation-style-link.instructions.md
documents/architecture/: README.md  data_lifecycle.md  overview.md
documents/architecture/backend/: README.md
documents/architecture/frontend/: README.md
documents/docs/: index.md
documents/docs/assets/stylesheets/: logo-styling.css
documents/docs/domains/: README.md  analysis.md  team.md
documents/docs/domains/classification/: README.md  category.md  criterium.md  dimension.md  type.md
documents/docs/domains/code_of_conduct/: README.md  code_of_conduct.md  expected_behavior.md  rule.md
documents/docs/domains/communication/: README.md  notification.md
documents/docs/domains/discipline/: README.md  award.md  discipline.md
documents/docs/domains/finance/: README.md  amount.md  cart.md  discount.md  expense.md  fee.md  finance.md  income.md  item.md  payment.md  receipt.md
documents/docs/domains/first_aid/: README.md  escalation.md  instruction.md  protocol.md  symptom.md
documents/docs/domains/foundation/: README.md  base_entity.md  ddd_concepts.md
documents/docs/domains/identity/: README.md  contact_information.md  identity.md  official_identifier.md
documents/docs/domains/inventory/: README.md  inventory.md  item.md  stock_record.md
documents/docs/domains/media/: README.md  digital_channel.md  media_asset.md  qr_code.md
documents/docs/domains/organization/: README.md  organization.md  target_audience.md
documents/docs/domains/process/: README.md  role_assignment.md
documents/docs/domains/ranking/: README.md  criteria.md  history.md  period.md  points.md  ranking.md  system.md  team.md
documents/docs/domains/registration/: README.md  period.md  registrant.md  registration.md  requirements.md  system.md
documents/docs/domains/reservation/: README.md  amenity.md  period.md  requirements.md  reservation.md  service.md  system.md  terms.md
documents/docs/domains/safety/: README.md  incident.md  requirements.md  response.md  safety.md  system.md
documents/docs/domains/schedule/: README.md  event.md  fixture.md  match.md  schedule.md  score.md  timeslot.md
documents/docs/domains/standing/: README.md  standing.md
documents/docs/domains/team/: README.md  roster.md  seed.md  team.md
documents/docs/domains/tournament/: README.md  TOURNAMENT_DOMAIN_COMPLETION.md  participant.md  rule.md  tournament.md
documents/docs/domains/user-journeys/: README.md
documents/docs/domains/venue/: README.md  area.md  map.md  venue.md  zone.md
documents/docs/user-journeys/: README.md  spectator-fan.md
documents/docs/user-journeys/.github-templates/: all-issues.md  epic-master.md  player-athlete.md
documents/docs/user-journeys/additional-stakeholders/: announcer-mc.md  equipment-manager.md  judge-scorer.md  security-officer.md  timekeeper.md
documents/docs/user-journeys/core-participants/: alex-player-athlete.md  coach-pete-coach-trainer.md  jordan-team-captain.md  sarah-team-manager.md
documents/docs/user-journeys/external-stakeholders/: README.md  community-member-chris-local-engagement.md  parent-patricia-parent-guardian.md  sponsor-steve-sponsor-representative.md
documents/docs/user-journeys/shared-experiences/: README.md  account-creation-authentication.md  account-creation.md  communication-notifications.md  communication-system.md  payment-processing.md  registration-process.md  tournament-discovery.md
documents/docs/user-journeys/support-services/: carol-volunteer-coordinator.md  dr-martinez-medical-support.md  lisa-media-representative.md  media-representative.md  medical-support.md  volunteer-coordinator.md
documents/docs/user-journeys/technical-processes/: README.md  (+48 more)
documents/reports/scheduled/: domain-analysis.md  quality-metrics.md  security-report.md
documents/scripts/: ISSUE_18_FINAL_COMPLETION_REPORT.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_IMPLEMENTATION_PLAN.md  README.md  SCRIPT_CALL_CHAINS.md  build.ps1  check_nav_orphans.py  comprehensive_markdown_lint.py  domain-lint.sh  domain_lint.py  fix-finance-lint.bat  fix-finance-lint.ps1  fix_markdown_lint.py  pre-commit-domain-lint.ps1  pre-commit-domain-lint.sh  setup_git_hooks.py  test-echo.ps1  validate.ps1
documents/scripts/archive/: .pre-commit-config-backup.yaml
documents/scripts/cli/: domain-lint.bat  domain-lint.sh  lint-docs.bat  lint_cli.py  quick_quality.py
documents/scripts/container/: README.md  build.ps1  validate-fallback.ps1  validate.ps1
documents/scripts/git-hooks/: pre-commit-domain-lint.ps1  pre-commit-domain-lint.sh  setup_git_hooks.py
documents/scripts/legacy/: README.md
documents/scripts/linting/: ENTERPRISE_SETUP.md  analyze_errors.py  domain-lint.bat  domain_linter.py  enterprise_fix_all.py  legacy_autofix.py  pre-commit-domain-lint.ps1  pre-commit-md-fixes.sh  repository_linter.py  repository_linter_new.py
documents/scripts/validation/: check_nav_orphans.py  check_no_frontmatter_title.py  ci_issue_resolver.py  quality_dashboard.py
documents/tests/: conftest.py  test_domain_linter.py
(+202 files in other folders)
