[project]
name = "documents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cairosvg>=2.8.2",
    "mkdocs>=1.6.1",
    "mkdocs-htmlproofer-plugin>=0.12.0",
    "mkdocs-git-committers-plugin-2>=2.5.0",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.6.15",
    "mkdocs-meta-descriptions-plugin>=4.1.0",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocs-print-site-plugin>=2.7.3",
    "pillow>=11.3.0",
    "pypdf>=5.8.0",
]
